[package]
name = "asn1"
version = "0.19.0"
authors = ["Alex Gaynor <alex.gaynor@gmail.com>"]
repository = "https://github.com/alex/rust-asn1"
keywords = ["asn1"]
license = "BSD-3-Clause"
description = "ASN.1 (DER) parser and writer for Rust."
edition = "2021"
# This specifies the MSRV
rust-version = "1.59.0"

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
libc = "0.2.11"

[workspace]
members = ["asn1_derive"]
